--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -19,7 +19,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  flutter_advanced_networkimage: ^0.3.11
+#  flutter_advanced_networkimage: ^0.3.11
+  extended_image: ^0.1.0
   extended_nested_scroll_view: ^0.3.1
   pull_to_refresh_notification: ^0.1.8
   http_client_helper: ^0.1.7
