--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -19,10 +19,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  extended_image: ^0.3.1
-  extended_nested_scroll_view: ^0.3.4
-  pull_to_refresh_notification: ^0.2.4
-  http_client_helper: ^0.1.9
+  extended_image: any
+  extended_nested_scroll_view: any
+  pull_to_refresh_notification: any
+  http_client_helper: any
+  like_button: any
 
 dev_dependencies:
   flutter_test:
