--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: loading_more_list
 description: Flutter plugin for building a loading more list with loadingMoreList and loadingMoreSliverList quickly.
-version: 0.3.6
-author: zmtzapxh <zmtzapxhlp@live.com>
+version: 0.3.7
+author: zmtzawq <zmtzawqlp@live.com>
 homepage: https://github.com/fluttercandies/loading_more_list
 
 environment:
