add ff_annotation_route to generate demo route

--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -24,12 +24,13 @@ dependencies:
   pull_to_refresh_notification: any
   http_client_helper: any
   like_button: any
+  loading_more_list:
+    path: ../
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  loading_more_list:
-    path: ../
+  ff_annotation_route: any
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
