--- a/example/android/build.gradle
+++ b/example/android/build.gradle
@@ -1,7 +1,11 @@
 buildscript {
     repositories {
-        google()
-        jcenter()
+        // google()
+        // jcenter()
+maven { url 'https://maven.aliyun.com/repository/google' }
+maven { url 'https://maven.aliyun.com/repository/jcenter' }
+maven { url 'http://maven.aliyun.com/nexus/content/groups/public' }
+
     }
 
     dependencies {
@@ -11,8 +15,11 @@ buildscript {
 
 allprojects {
     repositories {
-        google()
-        jcenter()
+        // google()
+        // jcenter()
+maven { url 'https://maven.aliyun.com/repository/google' }
+maven { url 'https://maven.aliyun.com/repository/jcenter' }
+maven { url 'http://maven.aliyun.com/nexus/content/groups/public' }
     }
 }
 
