--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -10,7 +10,7 @@ description: A new Flutter application.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.0.0-dev.68.0 <3.0.0"
+  sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -26,7 +26,13 @@ dependencies:
   like_button: any
   loading_more_list:
     path: ../
-
+# use following code if your flutter sdk is more than 1.10    
+dependency_overrides:
+  extended_image_library:
+    git:
+        url: https://github.com/fluttercandies/extended_image_library.git
+        ref: dev
+        
 dev_dependencies:
   flutter_test:
     sdk: flutter
