--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: loading_more_list
-description: Flutter plugin for building a loading more list with loadingMoreList and loadingMoreSliverList quickly.
-version: 0.3.7
+description: A loading more list which supports ListView,GridView,WaterfallFlow and Slivers.
+version: 1.0.0
 author: zmtzawq <zmtzawqlp@live.com>
 homepage: https://github.com/fluttercandies/loading_more_list
 
@@ -10,8 +10,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  extended_list: ^0.1.2
+  waterfall_flow: ^0.1.1
+  extended_list_library: ^0.1.2
 
-dev_dependencies:
+dev_dependencies: 
   flutter_test:
     sdk: flutter
 
