--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: loading_more_list
 description: A loading more list which supports ListView,GridView,WaterfallFlow and Slivers.
-version: 1.0.0
+version: 1.0.1
 author: zmtzawq <zmtzawqlp@live.com>
 homepage: https://github.com/fluttercandies/loading_more_list
 
@@ -10,9 +10,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  extended_list: ^0.1.2
+  extended_list: ^0.1.3
   waterfall_flow: ^0.1.1
-  extended_list_library: ^0.1.2
+  extended_list_library: ^0.1.3
+  loading_more_list_library: ^1.0.2
 
 dev_dependencies: 
   flutter_test:
