--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -19,20 +19,16 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  extended_image: any
   extended_nested_scroll_view: any
-  pull_to_refresh_notification: any
-  http_client_helper: any
-  like_button: any
-  loading_more_list:
-    path: ../
-# use following code if your flutter sdk is more than 1.10    
-dependency_overrides:
-  extended_image_library:
+  # flutter_candies_demo_library:
+  #   path: D:\zmt\FlutterCandies\dev\flutter_candies_demo_library  
+  flutter_candies_demo_library:
     git:
-        url: https://github.com/fluttercandies/extended_image_library.git
-        ref: dev
-        
+        url: https://github.com/fluttercandies/flutter_candies_demo_library.git  
+dependency_overrides:
+  loading_more_list:
+    path: ../      
+       
 dev_dependencies:
   flutter_test:
     sdk: flutter
