--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -10,8 +10,8 @@ description: A new Flutter application.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
-
+  sdk: ">=2.6.0 <3.0.0"
+  flutter: ">=1.17.0"
 dependencies:
   flutter:
     sdk: flutter
