--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,18 +1,17 @@
 name: loading_more_list
 description: A loading more list which supports ListView,GridView,WaterfallFlow and Slivers.
-version: 1.0.5
+version: 2.0.0
 author: zmtzawq <zmtzawqlp@live.com>
 homepage: https://github.com/fluttercandies/loading_more_list
 
 environment:
-  sdk: ">=2.0.0-dev.68.0 <3.0.0"
-
+  sdk: ">=2.6.0 <3.0.0"
+  flutter: ">=1.17.0"
 dependencies:
   flutter:
     sdk: flutter
-  extended_list: ^0.1.3
-  waterfall_flow: ^0.1.1
-  extended_list_library: ^0.1.3
+  extended_list: ^1.0.1
+  waterfall_flow: ^1.0.1
   loading_more_list_library: ^1.0.2
 
 dev_dependencies: 
