--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,6 @@
 name: loading_more_list
 description: A loading more list which supports ListView,GridView,WaterfallFlow and Slivers.
-version: 1.0.5
-author: zmtzawq <zmtzawqlp@live.com>
+version: 3.0.0
 homepage: https://github.com/fluttercandies/loading_more_list
 
 environment:
@@ -10,12 +9,18 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  extended_list: ^0.1.3
-  waterfall_flow: ^0.1.1
-  extended_list_library: ^0.1.3
+  extended_list:
+    git:
+        url: https://github.com/fluttercandies/extended_list.git
+        ref: v1.12.13
+  waterfall_flow:
+    git:
+        url: https://github.com/fluttercandies/waterfall_flow.git
+        ref: v1.12.13
+
   loading_more_list_library: ^1.0.2
 
-dev_dependencies: 
+dev_dependencies:
   flutter_test:
     sdk: flutter
 
