--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -20,9 +20,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   extended_nested_scroll_view: any
-  flutter_candies_demo_library:
-    git:
-        url: https://github.com/fluttercandies/flutter_candies_demo_library.git
+  http_client_helper: any  
+  extended_sliver: any
+  extended_image: any
+  like_button: any
+  url_launcher: 5.3.0
+  pull_to_refresh_notification: any
+   
 dependency_overrides:
   loading_more_list:
     path: ../
