--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
     sdk: flutter
   extended_list: ^2.0.0
   waterfall_flow: ^2.0.0
-
+  extended_list_library: ^1.0.1
   loading_more_list_library: ^1.0.2
 
 dev_dependencies:
