--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -10,30 +10,31 @@ description: A new Flutter application.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.6.0 <3.0.0"
-  flutter: ">=1.17.0"
+  sdk: '>=2.12.0 <3.0.0'
+  flutter: ">=2.0.0"
 dependencies:
-  flutter:
-    sdk: flutter
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
-  extended_nested_scroll_view: any
-  http_client_helper: any  
-  extended_sliver: any
+  cupertino_icons: ^1.0.2
   extended_image: any
+  extended_nested_scroll_view: any
+  extended_sliver: any
+  ff_annotation_route_library: any
+  flutter:
+    sdk: flutter
+  http_client_helper: any
   like_button: any
-  url_launcher: 5.3.0
   pull_to_refresh_notification: any
-   
+  url_launcher: any
+
 dependency_overrides:
   loading_more_list:
     path: ../
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  ff_annotation_route: any
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
