--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -19,21 +19,21 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  extended_nested_scroll_view: any
+  extended_nested_scroll_view: 4.0.0-non-null-safety
   http_client_helper: any  
   extended_sliver: any
   extended_image: any
   like_button: any
   url_launcher: 5.3.0
   pull_to_refresh_notification: any
-   
+  ff_annotation_route_library: any  
 dependency_overrides:
   loading_more_list:
     path: ../
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  ff_annotation_route: any
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
