--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: loading_more_list
 description: A loading more list which supports ListView,GridView,WaterfallFlow and Slivers.
-version: 5.0.3
+version: 6.0.0
 repository: https://github.com/fluttercandies/loading_more_list
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: '>=2.12.0 <4.0.0'
   flutter: ">=2.0.0"
 
 dependencies:
@@ -12,13 +12,15 @@ dependencies:
   extended_list_library: ^3.0.0
   flutter:
     sdk: flutter
-  loading_more_list_library: ^2.0.1
+  loading_more_list_library: ^3.0.0
   waterfall_flow: ^3.0.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+# dependency_overrides:
+#   loading_more_list_library:
+#     path: ../loading_more_list_library
 flutter:
   uses-material-design: true
   assets:
