--- a/example/.gitignore
+++ b/example/.gitignore
@@ -71,3 +71,5 @@ build/
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
 Podfile.lock
 pubspec.lock
+.flutter-plugins-dependencies
+.metadata
